--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-# Pre-commit hooks for Entropix
+# Pre-commit hooks for flakestorm
 # Install: pip install pre-commit && pre-commit install
 # Run manually: pre-commit run --all-files
 
