Add pre-flight validation, flexible response handling, and improved error detection - Add pre-flight check to validate agent with first golden prompt before mutations - Improve response extraction to handle various agent response formats automatically - Add support for non-JSON responses (plain text, HTML) - Enhance error detection for HTTP 200 responses with error fields - Add comprehensive auto-detection for common response field names - Improve JSON parsing error handling with graceful fallbacks - Add example YAML config for GenerateSearchQueries agent - Update documentation with build and installation fixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,8 @@ Repository = "https://github.com/flakestorm/flakestorm"
 Issues = "https://github.com/flakestorm/flakestorm/issues"
 
 [tool.hatch.build.targets.wheel]
+# Hatchling should auto-discover all subpackages when you specify the parent
+# However, if pip install . fails but pip install -e . works, use editable mode for development
 packages = ["src/flakestorm"]
 
 [tool.hatch.build.targets.sdist]
