Fix .gitignore to exclude root reports folder while tracking src/flakestorm/reports source code - Change reports/ to /reports/ to only ignore root reports directory - Add !src/flakestorm/reports/ to explicitly include source code module - Add reports module source files to repository

--- a/.gitignore
+++ b/.gitignore
@@ -80,10 +80,12 @@ Cargo.lock
 # =============================================================================
 # Project-specific
 # =============================================================================
-# Generated reports
-reports/
+# Generated reports (root only, not src/flakestorm/reports/)
+/reports/
 *.html
 !docs/*.html
+# Explicitly include source code reports module
+!src/flakestorm/reports/
 
 # Local configuration (may contain secrets)
 flakestorm.yaml
